<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="GVL_IO" Id="{93d900aa-a0eb-4511-806d-4512acd6d1c3}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	// ingressi fisici
	start	:	BOOL;
	stop	:	BOOL;
	emg		:	BOOL;
	ack		:	BOOL;
	fc1		:	BOOL;
	fc2		:	BOOL;
	
	// uscite fisiche
	h1		:	BOOL;
	hemg	:	BOOL;
	m		:	BOOL;
	libero	:	BOOL;
	
	(* state machine internals, useful for debugging  *)
	eStep		: E_Step;	// stato attuale della MSF
	tStepTime	: TIME;		// tempo di permanenza trascorso nello stato
	eErrStep	: E_Step;	// stato in cui è stato generato un errore
	nErrId		: DINT;		// codice identificativo dell'errore
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>